# dotnet-messagebroker-demo

./: .editorconfig  01_run_local.ps1  01_run_minimal_local.ps1  03_start_minikube.ps1  04_run_k8s.ps1  04_run_minimal_k8s.ps1  04_stop_k8s.ps1  05_run_helm.ps1  05_run_minimal_helm.ps1  05_stop_helm.ps1  06_run_argocd.ps1  07_stop_argocd.ps1  README.md  build.ps1  docker-compose.override.yml  docker-compose.yml  dotnet-messagebroker-demo.sln  format_changed_files.ps1  go.mod  go.sum  run_helm.ps1  run_k8s.ps1
.husky/: pre-commit  task-runner.json
Architecture.Tests/: Architecture.Tests.csproj  ArchitectureTests.cs
CatalogAPI/: CatalogAPI.csproj  Dockerfile  Program.cs  appsettings.json
CatalogAPI.Tests/: CatalogAPI.Tests.csproj  CatalogAPITest.cs  CatalogFixture.cs
Common/: Common.csproj  Consts.cs
CustomerAPI/: CustomerAPI.csproj  CustomerService.cs  Dockerfile  ICustomerService.cs  Program.cs  appsettings.json
rorderapi/: .gitignore  Cargo.toml  Dockerfile
rorderapi/src/: api.rs  constants.rs  events.rs  lib.rs  main.rs  messaging.rs  models.rs  services.rs  tests.rs
rorderapi/src/api/: httpserver.rs
rorderapi/src/configuration/: development.toml  production.toml  settings.rs
rorderapi/src/events/: cancelorder.rs  ordercollected.rs  ordercreated.rs  orderupdated.rs  returnorder.rs  serializers.rs
rorderapi/src/messaging/: constants.rs  orderbroker.rs  publisher.rs
rorderapi/src/models/: address.rs  converters.rs  customerinfo.rs  customerinfodb.rs  order.rs  orderdb.rs  orderitem.rs  orderitemdb.rs  orderstatus.rs  paymentinfo.rs  paymentmethod.rs  paymentstatus.rs
rorderapi/src/services/: orderservice.rs  orderserviceerror.rs  orderservicefactory.rs
rorderapi/src/tests/: api_tests.rs  testdata.rs
rorderapi/tests/: api_tests.rs
(+687 files in other folders)
