[package]
name = "rorderapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.5.1"
bson = "2.9.0"
clap = { version = "4.5.1", features = ["derive"] }
config = "0.14.0"
env_logger = "0.11.2"
log = "0.4.20"
mongodb = "2.8.1"
reqwest = "0.11.24"
rust_decimal = "1.34.3"
serde = "1.0.197"
thiserror = "1.0.57"
