[package]
name = "rorderapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.5.1"
async-trait = "0.1.77"
bson = { version = "2.9.0" ,features = ["chrono-0_4"] }
chrono = { version = "0.4.35", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive"] }
config = "0.14.0"
derivative = "2.2.0"
env_logger = "0.11.2"
futures-util = "0.3.30"
lapin = "2.3.1"
log = "0.4.20"
mongodb = "2.8.1"
num = "0.4.1"
num-derive = "0.4.2"
num-traits = "0.2.18"
reqwest = "0.11.24"
rust_decimal = { version =  "1.34.3", features = ["serde-with-float"] }
serde = "1.0.197"
serde_json = "1.0.114"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
uuid = "1.7.0"
